--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,14 @@
 {
     "cSpell.words": [
+        "createtables",
         "gruppa",
         "imaginedragons",
         "musicname",
+        "musik",
+        "playlistname",
+        "restapi",
         "Weeknd",
+        "zadera",
         "Группа",
         "Кино",
         "крови"
