--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev1": "nodemon index.js",
+    "dev2": "nodemon config/createtables.js"
+
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "middleware": "^1.0.0",
     "mysql2": "^3.9.7",
+    "nodemon": "^3.1.2",
     "sequelize": "^6.37.3",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
